<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    android:orientation="vertical"
    tools:context="com.anbaoxing.e_marketing.activitys.IssueActivity">

    <com.anbaoxing.e_marketing.widget.CommonTitle
        android:id="@+id/login_aty_commontitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.anbaoxing.e_marketing.widget.CommonTitle>

    <EditText
        android:text="13232650766"
        android:id="@+id/aty_login_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/write"
        android:drawableRight="@mipmap/contact_ic01"
        android:hint="@string/aty_login_input_number"
        android:padding="16dp"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textColorHint="@color/tab_uncheck"
        android:textSize="@dimen/menu" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:text="123"
        android:id="@+id/aty_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/write"
        android:drawableRight="@mipmap/lock_ic01"
        android:hint="@string/aty_login_input_password"
        android:padding="16dp"
        android:password="true"
        android:singleLine="true"
        android:textColorHint="@color/tab_uncheck"
        android:textSize="@dimen/menu" />

    <ImageButton
        android:id="@+id/aty_login_dologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/issue_aty_btn_bg"
        android:padding="16dp"
        android:src="@mipmap/next_step"
        android:textColor="@color/write" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/aty_login_string" />

        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-26dp"
            android:gravity="center_vertical"
            android:text="@string/aty_login_register"
            android:textColor="@color/title_bg"
            android:id="@+id/aty_login_register" />

    </LinearLayout>

    <TextView
        android:id="@+id/aty_login_forget_password"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/aty_login_forgetpassword"
        android:textColor="@color/title_bg"
          />



</LinearLayout>
