<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    android:orientation="vertical"
    tools:context="com.anbaoxing.e_marketing.activitys.IssueActivity">

    <com.anbaoxing.e_marketing.widget.CommonTitle
        android:id="@+id/forgetpassword_aty_commontitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.anbaoxing.e_marketing.widget.CommonTitle>

    <EditText
        android:id="@+id/aty_forgetpassword_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/write"
        android:drawableRight="@mipmap/contact_ic00"
        android:hint="@string/aty_forgetpassword_input_number"
        android:padding="16dp"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textColorHint="@color/tab_uncheck"
        android:textSize="@dimen/menu" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/write"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/aty_forgetpassword_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/write"
            android:hint="@string/aty_forgetpassword_input_code"
            android:padding="16dp"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColorHint="@color/tab_uncheck"
            android:textSize="@dimen/menu" />

        <TextView
            android:id="@+id/aty_forgetpassword_goto_getcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/register_aty_btn_bg"
            android:padding="8dp"
            android:text="@string/aty_forgetpassword_getcode"
            android:textColor="@color/title_bg" />

    </LinearLayout>

    <Button
        android:text="@string/aty_forgetpassword_reset"
        android:id="@+id/aty_forgetpassword_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/issue_aty_btn_bg"
        android:padding="16dp"
        android:textColor="@color/write" />


</LinearLayout>


