<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/title_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/title_bg">

        <TextView
            android:id="@+id/fragment_group_tab_share"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:drawableLeft="@mipmap/share"
            android:gravity="center"
            android:text="@string/fragment_group_tab_share"
            android:textColor="@color/write" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/fragment_group_tab_mygroup"
            android:textColor="@color/write"
            android:textSize="@dimen/title" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/write"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_group_tab_manage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/fragment_group_tab_manege"
            android:textColor="@color/black"
            android:textSize="@dimen/subhead" />

        <TextView
            android:id="@+id/fragment_group_tab_massage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/fragment_group_tab_massage"
            android:textColor="@color/black"
            android:textSize="@dimen/subhead" />

        <TextView
            android:id="@+id/fragment_group_tab_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/fragment_group_tab_news"
            android:textColor="@color/black"
            android:textSize="@dimen/subhead" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/write"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_of_manage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@color/title_bg" />

        <TextView
            android:id="@+id/tab_of_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@color/title_bg" />

        <TextView
            android:id="@+id/tab_of_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@color/title_bg" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    </android.support.v4.view.ViewPager>

</LinearLayout>